styte: fix profile align

--- a/client/src/router/pages/home.css
+++ b/client/src/router/pages/home.css
@@ -1,6 +1,11 @@
 .profile-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.profile-container h1 {
+  margin: 0;
 }
 
 .home-profile-img {
